# openqasm

./: .gitignore  .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOMINATIONS.md  README.md  WG.md  ast_release.md  buildPublishable.sh  constraints.txt  contributing.md  contributors.md  convert2pdf.py  convert2svg.py  governance.md  implementations.md  requirements.txt  requires.txt  tsc_statements_of_intent.md
source/grammar/: .gitignore  README.md  index.rst  openpulse.g4  openpulseLexer.g4  openpulseParser.g4  output.txt  qasm3.g4  qasm3.interp  qasm3.tokens  qasm3Lexer.g4  qasm3Lexer.interp  qasm3Lexer.py  qasm3Listener.py  qasm3Parser.g4  qasm3Parser.py  qasm3antlr.py  requirements-dev.txt  setup.cfg
source/grammar/openqasm_reference_parser/: __init__.py  exceptions.py  tools.py
source/grammar/tests/: test_grammar.py
source/grammar/tests/outputs/: add.qasm  add.yaml  alias.yaml  assignment.yaml  binary_expr.yaml  branch_binop.yaml  branching.yaml  bshift.tree  bshift.yaml  built_in_call.yaml  complex.yaml  declaration.yaml  empty_gate.tree  empty_gate.yaml  extern.yaml  gate_modifiers.yaml  header.yaml  kernel.yaml  loop.yaml  not.tree  order_of_ops.yaml  pragma.yaml  quantum_gate.yaml  sub_and_extern_call.yaml  sub_and_kern_call.yaml  subroutine.yaml  unary_expr.yaml
source/grammar/tests/reference/: header.yaml
source/openqasm/: .gitignore  .pylintrc  ANTLR_VERSIONS.txt  LICENSE.txt  MANIFEST.in  README.md  ast.py  pyproject.toml  requirements-dev.txt  setup.cfg  visitor.py
source/openqasm/ast_visitor/: ast_visitor.py  ast_visitor_examples.py
source/openqasm/docs/: Makefile  conf.py  contributing.rst  index.rst
source/openqasm/docs/api/: ast.rst  index.rst  spec.rst  (+3 more)
source/openqasm/openqasm3/: __init__.py  ast.py  parser.py  printer.py  properties.py  spec.py  visitor.py
source/openqasm/tests/: conftest.py  test_ast_visitor_examples.py  test_openqasm_tests.py  test_printer.py  test_qasm_parser.py  test_spec.py  test_version.py
source/openqasm/tools/: update_antlr_version_requirements.py
(+1988 files in other folders)
