[metadata]
name = openqasm_reference_parser
url = https://github.com/openqasm/openqasm
author = OpenQASM Contributors
description = Reference parser for OpenQASM files
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
license = Apache 2.0 Software License
license_files =
    ../../LICENSE
keywords = openqasm quantum
classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
packages = find:
include_package_data = True
install_requires =
    antlr4-python3-runtime

[options.packages.find]
exclude = tests*

[options.extras_require]
tests =
    pytest>=6.0
    pyyaml
all =
    %(tests)s
