[metadata]
name = openqasm3
url = https://github.com/Qiskit/openqasm
author = OpenQASM Contributors
description = Reference OpenQASM AST in Python
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
license = Apache 2.0 Software License
license_files =
    LICENSE.txt
keywords = openqasm quantum
classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
version = attr: openqasm3.__version__
python_requires = '>=3.7'

[options]
packages = find:
include_package_data = True

[options.packages.find]
exclude = tests*

[options.extras_require]
parser =
    antlr4-python3-runtime==4.9.2
tests =
    pytest>=6.0
    pyyaml
all =
    %(parser)s
    %(tests)s
